--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- Main section -->
      <div class="main">
      <div class="maincards">
-      <h1>Main Cards</h1>
+      <h1>Main Section</h1>
       <div class="cardcontaniner">
 
         <!-- card1 -->
